; ModuleID = '/home/carl/AnghaBench/radare2/libr/core/extr_cmd_flag.c___flag_graph.c'
source_filename = "/home/carl/AnghaBench/radare2/libr/core/extr_cmd_flag.c___flag_graph.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32 }

@listFlag = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.TYPE_4__*, i8*, i32)* @__flag_graph to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @__flag_graph(%struct.TYPE_4__* %0, i8* %1, i32 %2) #0 {
  %4 = alloca %struct.TYPE_4__*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32*, align 8
  store %struct.TYPE_4__* %0, %struct.TYPE_4__** %4, align 8
  store i8* %1, i8** %5, align 8
  store i32 %2, i32* %6, align 4
  %8 = call i32* @r_list_newf(i32* null)
  store i32* %8, i32** %7, align 8
  %9 = load %struct.TYPE_4__*, %struct.TYPE_4__** %4, align 8
  %10 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %9, i32 0, i32 0
  %11 = load i32, i32* %10, align 4
  %12 = load %struct.TYPE_4__*, %struct.TYPE_4__** %4, align 8
  %13 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %12, i32 0, i32 0
  %14 = load i32, i32* %13, align 4
  %15 = call i32 @r_flag_space_cur(i32 %14)
  %16 = load i32, i32* @listFlag, align 4
  %17 = load i32*, i32** %7, align 8
  %18 = call i32 @r_flag_foreach_space(i32 %11, i32 %15, i32 %16, i32* %17)
  %19 = load %struct.TYPE_4__*, %struct.TYPE_4__** %4, align 8
  %20 = load i32*, i32** %7, align 8
  %21 = load i8*, i8** %5, align 8
  %22 = load i32, i32* %6, align 4
  %23 = call i32 @__printRecursive(%struct.TYPE_4__* %19, i32* %20, i8* %21, i32 %22, i32 0)
  %24 = load i32*, i32** %7, align 8
  %25 = call i32 @r_list_free(i32* %24)
  ret void
}

declare dso_local i32* @r_list_newf(i32*) #1

declare dso_local i32 @r_flag_foreach_space(i32, i32, i32, i32*) #1

declare dso_local i32 @r_flag_space_cur(i32) #1

declare dso_local i32 @__printRecursive(%struct.TYPE_4__*, i32*, i8*, i32, i32) #1

declare dso_local i32 @r_list_free(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
